--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Drew's Playground</title>
+<link rel="stylesheet" type="text/css" href="/styles.css" /> 
 </head>
 
 <body>
