--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Drew's Playground</title>
-<link rel="stylesheet" type="text/css" href="/styles.css" /> 
+<link rel="stylesheet" type="text/css" href="./styles.css" /> 
 </head>
 
 <body>
