--- a/index.html
+++ b/index.html
@@ -17,8 +17,35 @@
     
     <body>
     
-        <h1>Hello World!</h1>
+        <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+          <div class="container">
+            <div class="havbar-header">
+              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">Toggle Navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a href="#" class="navbar-brand">Drew's Playground</a>
+            </div>
+            <div class="collapse navbar-collapse">
+              <ul class="nav navbar-nav">
+                <li class="active">
+                  <a href="#">Home</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
 
+        <div class="container">
+          <div class="starter-template">
+            <h1>Welcome to Drew's Playgound</h1>
+            <p class="lead">
+              This is where I break things.
+            </p>
+          </div>
+        </div>
         <!-- jQuery CDN -->
         <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
         <!-- Latest compiled and minified Twitter Bootstrap JavaScript -->
