--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
         <!-- Latest compiled and minified Twitter Bootstrap CSS -->
         <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
         <!-- Optional theme -->
-        <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap-theme.min.css"><!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+        <link rel="stylesheet" href="template.css">
+        <!--<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap-theme.min.css">-->
+        <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
