--- a/index.html
+++ b/index.html
@@ -19,33 +19,37 @@
     
     <body>
     
-        <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-          <div class="container">
-            <div class="havbar-header">
-              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="sr-only">Toggle Navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
-              <a href="#" class="navbar-brand">Drew's Playground</a>
+        <!--<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">-->
+        <!--  <div class="container">-->
+        <!--    <div class="havbar-header">-->
+        <!--      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">-->
+        <!--        <span class="sr-only">Toggle Navigation</span>-->
+        <!--        <span class="icon-bar"></span>-->
+        <!--        <span class="icon-bar"></span>-->
+        <!--        <span class="icon-bar"></span>-->
+        <!--      </button>-->
+        <!--      <a href="#" class="navbar-brand">Drew's Playground</a>-->
+        <!--    </div>-->
+        <!--    <div class="collapse navbar-collapse">-->
+        <!--      <ul class="nav navbar-nav">-->
+        <!--        <li class="active">-->
+        <!--          <a href="#">Home</a>-->
+        <!--        </li>-->
+        <!--      </ul>-->
+        <!--    </div>-->
+        <!--  </div>-->
+        <!--</div>-->
+        <div class="site-wrapper">
+          <div class="site-wrapper-inner">
+            <div class="container">
+              <div class="starter-template">
+                <h1><a href="http://www.twitter.com/drewfranz">Drew Franz</a></h1>
+                <p class="lead">
+                  Software Engineer at <a href="http://www.twitter.com/creativelive">@creativeLIVE</a><br />
+                  It's me, all the time! I work too much, never have time to play...
+                </p>
+              </div>
             </div>
-            <div class="collapse navbar-collapse">
-              <ul class="nav navbar-nav">
-                <li class="active">
-                  <a href="#">Home</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-
-        <div class="container">
-          <div class="starter-template">
-            <h1>Welcome to Drew's Playgound</h1>
-            <p class="lead">
-              This is where I break things.
-            </p>
           </div>
         </div>
         <!-- jQuery CDN -->
