--- a/index.html
+++ b/index.html
@@ -43,11 +43,12 @@
           <div class="site-wrapper-inner">
             <div class="container">
               <div class="starter-template">
-                <h1><a href="http://www.twitter.com/drewfranz">Drew Franz</a></h1>
+                <!-- <h1><a href="http://www.twitter.com/drewfranz">Drew Franz</a></h1>
                 <p class="lead">
                   Software Engineer at <a href="http://www.twitter.com/creativelive">@creativeLIVE</a><br />
                   It's me, all the time! I work too much, never have time to play...
-                </p>
+                </p> -->
+                <?php echo '<h1>Hello, world!</h1>' ?>
               </div>
             </div>
           </div>
