--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                   Software Engineer at <a href="http://www.twitter.com/creativelive">@creativeLIVE</a><br />
                   It's me, all the time! I work too much, never have time to play...
                 </p> -->
-                <?php echo '<h1>Hello, world!</h1>' ?>
+                <?php echo '<h1>Hello, world!</h1>'; ?>
               </div>
             </div>
           </div>
