--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               <div class="starter-template">
                 <h1><a href="http://www.twitter.com/drewfranz">Drew Franz</a></h1>
                 <p class="lead">
-                  Software Engineer at <a href="http://www.twitter.com/creativelive">@creativeLIVE</a><br />
+                  Software Engineer at <a href="http://www.ifsight.com">Interpersonal Frequency</a><br />
                   It's me, all the time! I work too much, never have time to play...
                 </p>
               </div>
@@ -56,6 +56,16 @@
         <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
         <!-- Latest compiled and minified Twitter Bootstrap JavaScript -->
         <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+        <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-6046499-4', 'auto');
+  ga('send', 'pageview');
+
+</script>
     </body>
 
 </html>
