--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
           <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
           <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
         <![endif]-->
+        <link href="https://micro.blog/drewfranz" rel="me" />
     </head>
     
     <body>
@@ -48,6 +49,7 @@
                   Software Engineer at <a href="http://www.ifsight.com">Interpersonal Frequency</a><br />
                   It's me, all the time! I work too much, never have time to play...
                 </p>
+                <p><a href="/blog" rel="me">Read more...</a></p>
               </div>
             </div>
           </div>
