Update blog link

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                   Software Engineer at <a href="http://www.ifsight.com">Interpersonal Frequency</a><br />
                   It's me, all the time! I work too much, never have time to play...
                 </p>
-                <p><a href="/blog" rel="me">Read more...</a></p>
+                <p><a href="http://blog.drewfra.nz" rel="me">Read more...</a></p>
               </div>
             </div>
           </div>
